# Chip-8

./: .gdb_history  CMakeCache.txt  CMakeLists.txt  Chip8  Makefile  README.md  chip8  cmake_install.cmake  f
includes/glad/: CMakeLists.txt  Makefile  cmake_install.cmake
includes/glad/include/glad/: glad.h
includes/glad/src/: glad.c
shaders/: fragmentshader.fs  vertexshader.vs
src/: .gdb_history  Chip8  Chip8.cpp  Chip8.hpp  chip8  main.cpp  shader.h
